modified:   index.html

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ But since 1965, the number of hunters in Massachusetts has decreased by 50%.
 The difficulty of hunting varies inversely with deer density (the number of deer per unit area, such as a square mile), meaning that the greater the density, the easier hunting becomes and vice-versa. The large <i>increase</i> in deer killed by Massachusetts hunters despite the large <i>decrease</i> in number of hunters is only possible if the deer density increased, making hunting easier for the reduced number of hunters. Increased density in a constant area (the area of Massachusetts) means the deer population has increased. 
 
  </p><p>So despite the killing, the herd continued to grow over almost six decades. And, crucially, we know that most of that increase occurred in suburban eastern Massachusetts.
-</p><p>This result is undoubtedly surprising to many. Part of the reason for this outcome is that state and local laws restrict hunting in densely populated areas,
+</p><p>That the deer-herd continued to grow during this time period is undoubtedly surprising to many. Part of the reason for this outcome is that state and local laws restrict hunting in densely populated areas,
 for obvious and necessary safety reasons.
 </p><p id="ConveyorBelt">
 But another major factor contributing to this result is that in suburbs such as Carlisle, we have created a very hospitable environment for deer,
