modified:   index.html

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@ to help the animals.
 </p><p>
 The rules of logic tell us that the inverse of "deer herds with sufficient food grow rapidly" is also true: deer herds
 without sufficient food do not grow. The amount of available food imposes a limit on the herd size.
-The ongoing deer-food feast that we are providing has increased that limit. It is more difficult to reduce larger herds to a desired size than is the case with smaller herds and the difficulty grows somewhat faster than linearly (doubling
-the initial herd size requires killing more than twice the number of deer to achieve the same objective in the same time). 
+The ongoing deer-food feast that we are providing has increased that limit. If we actually do have too many deer in Carlisle by some scientifically valid measure, we need look no further than our own behavior; <i>we</i> have created the problem. 
+
 </p><p>
 The following conclusions are inescapable:
 <ul>
@@ -222,13 +222,10 @@ The following conclusions are inescapable:
     In suburbia, <i>we</i> are feeding the deer, making larger herds possible than would occur in natural settings. 
     </li>
 <li>  
-    Larger herds are more difficult to reduce to a target size than smaller herds.
+	Reducing the size of large deer herds by hunting in suburban areas is extremely difficult or even impossible in many such settings.
     </li>
     </ul>
     
-    This, plus sensible safety laws and bylaws regarding discharge of weapons near residences, is why all forms of hunting in Massachusetts 
-have failed to reduce the size of the State's herd. The herds are in rapid-growth mode thanks to the food we provide and hunters simply can't kill deer fast enough to overcome that growth. 
-
 </p><p id="RutbergTalk">
 
 This is precisely why an authority on deer population management, <a href="https://vetprofiles.tufts.edu/profile/allen-t-rutberg/">Dr. Allen Rutberg of Tufts University</a>, concluded the first half of his talk in Carlisle, <a href="https://www.youtube.com/watch?v=1SonGERqBhw">a video of which will be found here</a>, with 
