modified:   index.html

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ the statement
   </blockquote>
     </p>
 
-    His point is another way of stating our primary thesis: if you don't kill deer faster than the herds  grow naturally -- and they do so rapidly when they have enough food --  you will not reduce herd sizes and consequently you will not solve problems related to deer overpopulation.
+    His point is another way of stating our central point: if hunters don't kill deer faster than the herds  grow naturally -- and they do so rapidly when they have enough food --  hunting will not reduce herd sizes and consequently will not solve problems related to deer overpopulation. 
 
     <h3 id="calculation">A Carlisle-specific calculation</h3>
 
