Fix spelling error. modified:   index.html

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ the statement
     This quote is another way of stating our central point: if hunters don't kill deer faster than the herds  grow naturally -- and they do so rapidly when they have enough food --  hunting will not reduce herd sizes and consequently will not solve problems related to deer overpopulation.
 
   </p><p>
-	It is also important to note that problems are best solved by addressing their root cause(s). It does not make sense for us to create large deer populations by feeding them lavishly by use of the wrong plants in our gardens and landscapes and then futiley trying
+	It is also important to note that problems are best solved by addressing their root cause(s). It does not make sense for us to create large deer populations by feeding them lavishly by use of the wrong plants in our gardens and landscapes and then futilely trying
 	to fix what we have done by killing a few of the animals. It would be far better to choose our plantings more carefully and thus avoid the problem.
 
     <h3 id="calculation">A Carlisle-specific calculation</h3>
