--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ the statement
   </blockquote>
     </p>
 
-    This quote is another way of stating our central point: if hunters don't kill deer faster than the herds  grow naturally -- and they do so rapidly when they have enough food --  hunting will not reduce herd sizes and consequently will not solve problems related to deer overpopulation.
+    This quote is related to our central point: if hunters don't kill deer faster than the herds  grow naturally -- and they do so rapidly when they have enough food --  hunting will not reduce herd sizes and consequently will not solve problems related to deer overpopulation.
 
   </p><p>
 	It is also important to note that problems are best solved by addressing their root cause(s). It does not make sense for us to create large deer populations by feeding them lavishly by use of the wrong plants in our gardens and landscapes and then futilely trying
