modified:   index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@ to place an article on the next Town Meeting warrant to regulate bow hunting on 
 	</blockquote>
 The question passed by a significant margin, 350-90, with 9 blank ballots.
 
-Despite the town's clear message, the article did not appear on any subsequent Town Meeting warrants and in 2018, the Carlisle Select Board initiated a pilot bow-hunt for deer on public lands without a Town Meeting vote. 10 deer were killed, 5 female.
+Despite the town's clear message, the article did not appear on any subsequent Town Meeting warrants and in 2018, the Carlisle Select Board initiated a pilot bow-hunt for deer on public lands without a Town Meeting vote.
+ The Carlisle Select Board acted despite the absence of a rigorous and unbiased study demonstrating forest damage that could be attributed to deer overabundance.
+ They also took this action despite much data and expert opinion that public-land archery hunts could not and would not address deer issues.
+ 10 deer were killed, 5 female in the 2018 hunt.
 
   <p>In 2019, another hunt occurred, resulting in the killing of 6 deer (3 females).
   
@@ -68,18 +71,16 @@ Despite the town's clear message, the article did not appear on any subsequent T
   public land deer-hunting question before the 2021 Town Meeting. In the spring of 2021, the Select Board chose to join a Boston University
   research program that is studying how communities deal with deer issues. The question of whether to continue the town land hunts did not
   appear on the warrant for the 2021 Town Meeting.
-  
 
-  </p><p>
- The Carlisle Select Board acted despite the absence of a rigorous and unbiased study demonstrating forest damage that could be attributed to deer overabundance.
- There was also much data and expert opinion that public-land archery hunts could not and would not address deer issues.
-  </p>
+  Now, in 2024, the Select Board has decided to reopen the question of how to manage the Carlisle deer population.
+
   <h2>
   A Summary of the Argument Against the Hunts
   </h2>
   </p>Throughout human history, nature has surprised us. In the absence of scientific knowledge, we have made assumptions about the workings of our world that 
   seemed plausible, that suited our sense of order, and were completely wrong.  For example, for much of our history it was thought that the earth was the center of the universe. Copernicus taught us otherwise.
-  Similarly, Galileo corrected the idea, which came from Aristotle, that in a vacuum, heavy objects dropped from a certain height will reach the ground before light objects dropped from the same height at the same time. There are many other examples of science correcting widely held but incorrect beliefs.
+  Similarly, Galileo disabused us of the idea, which came from Aristotle, that in a vacuum, heavy objects dropped from a certain height will reach the ground before light objects dropped from the same height at the same time.
+There are many other examples of science correcting widely held but erroneous beliefs.
 
    </p><p>And so it is with deer. A great deal of scientific knowledge has been accumulated concerning both deer-related problems and their management. Consistent with our history, the intuitions of lay people are frequently contradicted by that science.
    It is therefore essential that we call upon actual scientific knowledge, rather than untested conjecture, both when establishing whether deer-related problems exist and if they do, what to do about them. It is the purpose of this website to assist with this goal.
@@ -577,7 +578,7 @@ If you jump out of an airplane and your parachute fails to open,
 is flapping your arms better than doing nothing? Is pouring a glass of water on a raging house fire better than doing nothing? Will killing 10 mosquitoes control the mosquito population in Carlisle?
   </p><p>
 "Doing something" is not better 
-if there is no benefit, or there is a benefit, it does not justify its added costs. 
+if there is no benefit, or if there is a benefit, it does not justify its added costs. 
 
   </p><p>
  Please consider this chart:
