modified:   index.html

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ when we can intervene in ways that satisfy good scientific and engineering crite
   </p><p>
   As for ignoring the sign of the answer, I refer
   you to the HP12c manual's description of the sign conventions used in cash flow problems. While we must correctly observe those conventions when solving such problems with the calculator, we don't need to be so strict in our discussions, as long as our
-  conclusions are consistent with the the math.  I believe the text is clear that when using these results, even without the minus sign, we are referring to deer removed from the herd, just as one might say "I withdrew $150 from my bank account", as opposed to "A flow of -$150 occurred in my bank account".
+  conclusions are consistent with the math.  I believe the text is clear that when using these results, even without the minus sign, we are referring to deer removed from the herd, just as one might say "I withdrew $150 from my bank account", as opposed to "A flow of -$150 occurred in my bank account".
   </p><p  id="F4">
   [4] Consulting the bar chart, we see that 126 and 64 are the number of deer that must be killed to reduce the herd from 513 to 200 in 30 years, assuming growth rates
       of 41.4% and 26% respectively. How can the results be the same for the different problem we just solved? The answer lies in rounding error. The actual results for the two problems are not integral numbers of deer; there are digits to the right of
